--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wrapify</title>
   </head>
-  <body class="dark:bg-zinc-950">
+  <body class="">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
