--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wrapify</title>
   </head>
-  <body class="">
+  <body class="bg-zinc-900 text-white">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
